# canvas-module-tui

./: Cargo.toml
src/: course_page.rs  courses.rs  env.rs  main.rs  menu.rs
